configure-pod-container/pgadmin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-pgadmin
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
